fix: improved readability of titles + consistency

--- a/npm-new/anisoc/src/index.css
+++ b/npm-new/anisoc/src/index.css
@@ -118,7 +118,6 @@ a {
 }
 
 .events .title {
-  text-align: right;
   padding-bottom: 2vw;
 }
 
